# duckdb-dbt-airflow-training

./: .gitignore  README.md  docker-compose.yaml
rawdata/orders/year=2018/month=01/: raw_orders_201801.csv
rawdata/orders/year=2018/month=02/: raw_orders_201802.csv
rawdata/orders/year=2018/month=03/: raw_orders.csv
rawdata/orders/year=2018/month=04/: raw_orders.csv
rawdata/payments/year=2018/month=01/: raw_payments.csv
rawdata/payments/year=2018/month=02/: raw_payments.csv
rawdata/payments/year=2018/month=03/: raw_payments.csv
rawdata/payments/year=2018/month=04/: raw_payments.csv
workflow/: README.md  pyproject.toml
workflow/airflow/: Dockerfile  README.md
workflow/airflow/config/: airflow.cfg
workflow/airflow/dags/: run_dbt.py
workflow/dbt/: .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
workflow/dbt/models/lake/: customers.sql  customers.yml  orders.sql  orders.yml  payments.sql  payments.yml
workflow/dbt/models/mart/: mart_customers.sql  mart_orders.sql
workflow/dbt/models/staging/: stg_customers.sql  stg_customers.yml  stg_orders.sql  stg_orders.yml  stg_payments.sql  stg_payments.yml
